<resources>
    <string name="app_name">Paint</string>
    <string name="title">Paint</string>
    <string name="button">Start</string>
    <string name="settings">Palette</string>
    <string name="about">About</string>
    <string name="group">Group 02</string>
    <string name="alex">51023 - Alexandre Monteiro</string>
    <string name="lac">55721 - Rodrigo Nogueira</string>
    <string name="mileide">55839 - Mileide Gomes</string>
    <string name="ghrimn">55909 - Pedro Sustelo</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="lightgreen">Light Green</string>
    <string name="darkgreen">Dark Green</string>
    <string name="darkblue">Dark Blue</string>
    <string name="lightblue">Light Blue</string>
    <string name="purple">Purple</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="pink">Pink</string>
    <string name="brown">Brown</string>
    <string name="background">Background</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="colorPickerText">Custom Color</string>
    <string name="line">Line</string>
    <string name="map">Map</string>
    <string name="startdraw">Start Drawing</string>
    <string name="stopdraw">Stop Drawing</string>
    <string name="load">Load</string>
    <string name="DrawName">Draw Name</string>
</resources>